Made body a grid container; made header a flex container and centered content; made content container a grid container; centered text elements; made image container a flex container and centered content; made para container 50% width and centered content

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,42 @@
 /* styles.css */
 body {
     background-color: #FFF8ED;
+    display: grid;
+    grid-template-areas: 
+    "header"
+    "content";
+}
+
+header {
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+}
+
+#content {
+    grid-area: content;
+    display: grid;
+}
+
+.header-container > h1 {
+    text-align: center;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+}
+
+.para-container {
+    width: 50%;
+    justify-self: center;
+}
+
+.para-container > p {
+    text-align: center;
+}
+
+.hours-container > *,
+.location-container > * {
+    text-align: center;
 }
