--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 body {
-    background-color: #FFF8ED;
+    background-color: #FFF5F5;
     display: grid;
     grid-template-areas: 
     "header"
@@ -16,6 +16,7 @@ header {
 #content {
     grid-area: content;
     display: grid;
+    color: #8A4141;
 }
 
 .header-container > h1 {
@@ -44,9 +45,18 @@ header {
 button {
     padding: 10px 40px;
     font-size: 22px;
+    background-color: #FFB1A9;
+    border: 4px solid #FFE1DF;
+    border-radius: 16px;
+    color: #FFF;
 }
 
 nav {
     display: flex;
     gap: 50px;
+}
+
+.image-container > img {
+    border: 2px solid #FFF;
+    border-radius: 16px;
 }
